# Advanced-RAG

./: .dockerignore  .gitignore  EC2-deployment-steps.txt  README.md  astra_index_records.db  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.txt  render.yaml  requirements.txt  requirements_new.txt  requirements_old.txt  test.ipynb
nginx/: default.conf
ngnix/: default.conf
src/: logger_config.py
src/backend/: Adding_files.py  DB.py  Dockerfile  Image_processing_disk.py  agent.py  chunking_retrieveing.py  file_handler.py  hybrid_docx_parser.py  hybrid_excel_parser.py  hybrid_pdf_parser.py  hybrid_pptx_parser.py  image_processing_bytes.py  main.py  parser.py  utilis.py
src/frontend/: Dockerfile  app.py  requirements.txt
src/frontend/.streamlit/: secrets.toml
src/models/: clip_model.py  euri.py
