[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Agentic_Advanced_RAG_chat_bot"
version = "1.0"
description = "An advanced Retrieval-Augmented Generation (RAG) chatbot with agentic capabilities"
license = "MIT"
authors = [
    { name = "Chetan Fernandis", email = "chetanfern2@gmail.com" }
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"] 

# Optional dependencies (useful for Git-based installs)
[project.optional-dependencies]
extras = [
    "clip @ git+https://github.com/openai/CLIP.git"
]

